# xxxstar

./: .agent.md  .gitignore  .instructions.md  .prompt.md  ASSESSMENT_REBUTTAL.md  CHAOS_QUICK_REFERENCE.sh  CHAOS_TESTING_GUIDE.md  CURRENT_MAINNET_STATUS.md  Cargo.toml  DEPENDENCY_UPGRADE_PLAN_PHASE3_THIRD_PARTY.md  DEPLOYMENT_PACKAGE_INDEX.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_VERIFICATION_2026-05-17.md  DEPLOYMENT_VERIFICATION_CHECKLIST_HUB_FEE.md  DOCUMENTATION_INDEX.md  Dockerfile.validator  EXECUTION_PLAYBOOK.md  FEATURE_REGISTRY.toml  FINAL_REPORT.md  GAP_EXECUTION_PLAN.md  HUB_FEE_DEPLOYMENT_STATUS.md  MAINNET_LAUNCH_CHECKLIST.md  MAINNET_RC1_SCOPE.md  NORTHERN_SWARM_ARCHITECTURE.md  PHASE_5_COMPLETE_LAUNCHER.sh  PHASE_5_STATUS.sh  QUICK_PHASE_5_START.sh  SESSION_UPDATE_SUMMARY.md  TESTNET_DEPLOYMENT_GUIDE.md  TESTNET_FEATURE_FLAGS.toml  TESTNET_HUB_FEE_MONITOR.sh  TODO.md  X3_ATOMIC_STAR.code-workspace  X3_END_TO_END_GAPS_MASTER_PLAN.md  YOLO_FINISHER_v5.prompt.md  cargo_check_all_features.txt  cargo_check_output.txt  fix-checksums.py  grok-chat.html  (+7 more)
.ai/: SESSION_SUMMARY_EXAMPLES.md  SESSION_UPDATE_SUMMARY_20260523.md  SESSION_UPDATE_SUMMARY_x3lang_20260523.md  context_map.md
.audit/: CLAIMS_INVENTORY_AND_TRACKER.md  SURGICAL_FIX_GUIDE.md  UNVERIFIED_CLAIMS_AUDIT.md
.cargo/: README.md  config.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  copilot-instructions.md
.kilo/: agent-manager.json
.legion/: AUDITOR.md
.planning/: GITHUB_PROJECTS_SETUP.md  GIT_WORKFLOW_AND_COLLABORATION.md  QUICK_EXECUTION_GUIDE.md  README.md  REFERENCE_CARD.md  SPRINT_0_IMMEDIATE_EXECUTION.md  SPRINT_DETAILED_PLANS.md
.rc4-runtime-upgrade-work/: submit_runtime_upgrade.cjs
.repomix/: frontend_only.md
.reports/: ROO_CODE_SETUP.md  SCAN_BOOTSTRAP_SUMMARY.md
.scripts/: x3_invariant_dashboard.py  x3_level10_swarm.sh  x3_mutation_gate.py  x3_smell_scan.sh
.x3/: ACCEPTANCE_CRITERIA.md  X3_MAINNET_GATES.md  X3_RISK_REGISTER.md
3d/: .~lock.154131.docx#  154131.docx
adapters/: UniversalAdapter.sol
ai-hooks/: AIGovernanceBot.ts  AIYieldOptimizer.ts
allocator/: Cargo.toml
bridges/: AtomicBridge.sol
chain-specs/: x3-local3-plain.json
contracts/: AtlasSphereX3.sol  WrappedX3.sol
crates/chronos-flash/: Cargo.toml
crates/chronos-flash/src/: config.rs  error.rs  router.rs
crates/cross-chain-position-manager/: Cargo.toml  README.md
crates/cross-chain-position-manager/src/: accounting.rs  arbitrage.rs  config.rs  error.rs  events.rs  partner.rs  solvency.rs  state.rs  tracking.rs  visibility.rs
crates/cross-chain-position-manager/tests/: integration_tests.rs
crates/cross-vm-coordinator/: Cargo.toml
crates/cross-vm-coordinator/src/: bridge_integration_tests.rs  config.rs  flashloan_adapter.rs  htlc.rs  lib.rs  persistence.rs  tests.rs  types.rs
crates/custody-service/: Cargo.toml
crates/custody-service/src/: audit.rs  error.rs  service.rs
crates/dream-mining/: Cargo.toml
crates/dream-mining/src/: error.rs  monitor.rs
crates/dylint-determinism/: Cargo.toml
crates/dylint-determinism/src/: lib.rs
crates/evm-integration/: Cargo.toml
crates/evm-integration/src/: frontier.rs  lib.rs  mini_evm.rs  precompiles.rs  state.rs
crates/evm-integration/tests/: erc20_integration.rs
crates/invariant-macros/: Cargo.toml
crates/invariant-macros/src/: lib.rs
crates/invariant-macros/tests/: registry_check.rs  trybuild.rs
crates/invariant-macros/tests/fixtures/: empty_registry.toml
crates/invariant-macros/tests/ui/: fail_invalid_format.rs  fail_invalid_format.stderr  ok_case.rs
crates/northern-swarm/: Cargo.toml
crates/northern-swarm/src/: chain_watcher.rs  executor.rs  lib.rs  main.rs  result_submitter.rs  types.rs
crates/orchestra/: Cargo.toml
crates/orchestra/src/agent/: off_chain.rs
crates/orchestra/src/jury/: mod.rs  session.rs
crates/orchestra/src/task/: mod.rs  queue.rs
crates/parallel-proposer/: Cargo.toml  parallel-proposer.cdx.json
crates/parallel-proposer/src/: integration.rs  lib.rs  substrate.rs
crates/private-mempool/: Cargo.toml  private-mempool.cdx.json
crates/private-mempool/src/: queue.rs
crates/quantum-crypto/: Cargo.toml
crates/quantum-crypto/src/: kyber.rs  types.rs
crates/tps-tracker/: Cargo.toml
crates/treasury/: Cargo.toml
crates/x3-accounting-events/: Cargo.toml
crates/x3-accounting-events/src/: tests.rs
crates/x3-asset-kernel-types/: Cargo.toml
crates/x3-atomic-client/: Cargo.toml
crates/x3-atomic-client/src/: lib.rs
crates/x3-atomic-trade/: Cargo.toml
crates/x3-atomic-trade/src/: swap_rpc.rs
crates/x3-backend/: Cargo.toml
crates/x3-backend/src/: error.rs  lower.rs  opcode.rs
crates/x3-bridge/: Cargo.toml
crates/x3-bridge-adapters/: Cargo.toml
crates/x3-bridge-adapters/src/: lib.rs
crates/x3-bridge/src/: bitcoin_htlc.rs  btc_spv.rs  cross_chain_account.rs  cross_chain_proofs.rs  ethereum_bridge.rs  gas_relayer.rs  l2_bridge.rs  security_council.rs
crates/x3-canonical-truth/: Cargo.toml
crates/x3-canonical-truth/src/: identity.rs  sync.rs  treasury.rs
crates/x3-cli/: Cargo.toml  x3-cli.cdx.json
crates/x3-cli/src/: main.rs  templates.rs
crates/x3-cli/src/commands/: demo.rs  docgen.rs  init.rs  mod.rs  query.rs  test.rs
crates/x3-constitution/: Cargo.toml
crates/x3-constitution/src/: amendment.rs  articles.rs  lib.rs
crates/x3-crosschain-intent/: Cargo.toml
crates/x3-crosschain-intent/src/: compiler.rs  error.rs  instructions.rs  intent.rs  lib.rs  lifecycle.rs  simulation.rs  types.rs
crates/x3-crosschain-intent/tests/: compiler.rs
crates/x3-dns-server/: Cargo.toml
crates/x3-dns-server/src/: blockchain.rs  config.rs  error.rs  lib.rs
crates/x3-external-route-registry/: Cargo.toml
crates/x3-fees/: Cargo.toml
crates/x3-fees/src/: calculator.rs  curve.rs  kani_proofs.rs  reputation.rs  types.rs
crates/x3-fees/tests/: prop_fee_invariants.rs
docs/: CROSSCHAIN_GOVERNANCE.md  DEPLOYMENT_CHECKLIST.md  ECONOMIC_WHITEPAPER_SUMMARY.md  FEE_SCHEDULE.md  GIT_CORRUPTION_RECOVERY.md  RC1_FEATURE_DEBT.md  SIDECAR_OPERATOR.md  (+7 more)
(+6341 files in other folders)
