[package]
name = "chronos-flash"
version = "0.1.0"
edition = "2021"
description = "ChronosFlash - Negative-latency pre-execution oracle for X3 Chain"
license = "MIT"
authors = ["X3 Chain Team"]

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
]
runtime-benchmarks = []

[dependencies]
# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Async
tokio = { version = "1.0", features = ["full", "sync", "time", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hashing
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Numeric
num-bigint = "0.4"
num-traits = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
log = "0.4"

# Workspace deps (optional, enable when available)
# gpu-swarm = { path = "../gpu-swarm" }
# quantum-swarm = { path = "../quantum-swarm" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
