[package]
name = "x3-cross-vm-coordinator"
version = "0.1.0"
edition = "2021"
description = "Cross-VM Atomic Trade Coordinator — HTLC-based state machine for EVM ↔ SVM ↔ X3VM atomic swaps with flashloan integration"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
async-trait = "0.1"
# SECURITY: OsRng for cryptographically secure HTLC secret generation
rand = { version = "0.8", features = ["getrandom"] }
# SECURITY: Zeroize on drop for sensitive key material
zeroize = "1.7"
# SECURITY: Cryptographic signing for HTLC operations
secp256k1 = { version = "0.28", features = ["rand-std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

reqwest = { version = "0.11", features = ["json"] }
blake2 = "0.10"
blake3 = "1.5"
subtle = "2.5"
x3-cross-vm-bridge = { path = "../cross-vm-bridge" }
# Optional: for production persistence with substrate offchain storage
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", optional = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = ["real-signing"]
offchain = ["sc-client-api", "sp-core"]
# Enable signed on-chain transaction submission for all three VM adapters.
# Without this flag the adapters use simulation/dry-run paths only.
real-signing = []
