[package]
name = "custody-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tonic = "0.12"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"

# HSM integration
pkcs11 = "0.5"
openssl = "0.10"

[[bin]]
name = "custody-service"
path = "src/bin/main.rs"

[lib]
name = "custody_service"
path = "src/lib.rs"
