[package]
name = "dream-mining"
version = "0.1.0"
edition = "2021"
description = "Dream Mining - Idle GPU optimization for background computation during sleep"
license = "MIT"
authors = ["X3 Chain Team"]

[features]
default = ["std"]
std = ["serde/std"]
gpu-stats = []

[dependencies]
# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "sync", "time", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
log = "0.4"

# System info
sysinfo = "0.32"

[dev-dependencies]
tokio-test = "0.4"
