[package]
name = "dylint-determinism"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Custom dylint lints enforcing determinism rules for x3-chain runtime code"
publish = false

# Stand-alone workspace so this crate uses its own rust-toolchain.toml (nightly+rustc-dev)
# rather than the repo-root stable 1.93.1 toolchain.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "3"

[dev-dependencies]
dylint_testing = "3"

[package.metadata.rust-analyzer]
rustc_private = true
