[package]
name = "x3-evm-integration"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "EVM integration for X3 Chain dual-VM execution"

[dependencies]
# Substrate primitives
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

# SputnikVM — real no-std EVM interpreter
evm = { workspace = true, default-features = false }

# Frontier EVM (optional — gated behind `frontier` feature; not in default RC-1 wasm build)
pallet-evm = { workspace = true, default-features = false, optional = true }
fp-evm = { workspace = true, default-features = false, optional = true }

# EVM numeric types
primitive-types = { version = "0.12.2", default-features = false }

# Serialization
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

# Logging
log = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "log/std",
    "evm/std",
    # Frontier std propagation only when frontier feature is on
    "pallet-evm?/std",
    "fp-evm?/std",
]
# Real Frontier EVM execution path (post-RC1; OFF by default).
# Pulls pallet-evm/fp-evm into the dep tree which transitively pulls
# cumulus-primitives-* and breaks the wasm32v1-none --no-default-features
# build under stable2512. Keep OFF for the runtime wasm build.
frontier = ["pallet-evm", "fp-evm"]
test-utils = []
