[package]
name = "invariant-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
regex = "1"
walkdir = "2"
# Optional registry check
toml = "0.5"

[dev-dependencies]
trybuild = "1.0"
