[package]
name = "orchestra"
version = "0.1.0"
edition = "2021"
description = "Multi-layered orchestral agent system for X3 Chain — on-chain execution, off-chain jury, rotation, and scrap yard alignment"
authors = ["X3 Chain Team"]
license = "MIT"
repository = "https://github.com/x3-chain/x3-chain"

[[bin]]
name = "orchestra-node"
path = "src/bin/orchestra_node.rs"

[features]
default = []
chain-integration = []

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Crypto — anonymous voting commitments, identity hashing
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8"
getrandom = "0.2"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# HTTP admin/API surface
axum = "0.7"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
once_cell = "1.18"
glob = "0.3"

# Chain RPC client (optional for blockchain integration)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
